--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "7.1.0",
     "gulp-sass": "^5.1.0",
-    "sass": "^1.77.8",
     "gulp-uglify": "^3.0.2",
-    "jquery": "^3.7.1"
+    "jquery": "^3.7.1",
+    "sass": "^1.77.8",
+    "slick-carousel": "^1.8.1"
   }
 }
